--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "luxon": "^1.22.0",
+    "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
     "socket.io": "^2.3.0"
   }
